<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayWelcomeActivity" >

    <Button
        android:id="@+id/transactions_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/transaction"
    	android:onClick="openTransactionActivity" />
    
    <Button
        android:id="@+id/budget_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:text="@string/budget" />
    
    <Button
        android:id="@+id/settings_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:text="@string/settings" 
        android:onClick="openSettingsActivity" />
    
    <Button
        android:id="@+id/logout_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/logout"
        android:onClick="signOutReturnToWelcome" />

</RelativeLayout>