<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordTextView"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="4dp"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/username_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usernameTextView"
        android:layout_alignBottom="@+id/usernameTextView"
        android:layout_alignParentRight="true"
        android:ems="10" 
        android:inputType="text"/>

    <EditText
        android:id="@+id/password_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordTextView"
        android:layout_alignBottom="@+id/passwordTextView"
        android:layout_alignLeft="@+id/username_message"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/offline_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_button"
        android:layout_alignBottom="@+id/login_button"
        android:layout_alignParentLeft="true"
        android:text="@string/offline_view"
        android:onClick="openOfflineView" 
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/password_message"
        android:layout_marginBottom="44dp"
        android:onClick="openWelcome"
        android:text="@string/login" />

</RelativeLayout>